--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,8 @@ version: 1.0.{build}
 image: Visual Studio 2017
 configuration: Debug
 platform: Any CPU
+environment:
+  _SkipNearestTargetFrameworkResolution: true
 before_build:
 - cmd: nuget restore
 build:
