--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,8 @@ version: 1.0.{build}
 image: Visual Studio 2017
 configuration: Debug
 platform: Any CPU
-environment:
-  _SkipNearestTargetFrameworkResolution: true
 before_build:
-- cmd: nuget restore
+- cmd: .\.nuget\nuget restore
 build:
   verbosity: minimal
 test_script:
